dwk-server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwk-server-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
